--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,9 +2,9 @@ name: Next.js CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, prod ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, prod ]
 
 jobs:
   build:
