--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -22,11 +22,11 @@ jobs:
     - name: Install dependencies
       run: npm ci --legacy-peer-deps
     
-    - name: Run linting
-      run: npm run lint
+    # - name: Run linting
+    #   run: npm run lint
     
-    - name: Run tests
-      run: npm test
+    # - name: Run tests
+    #   run: npm test
     
     - name: Build application
       run: npm run build
