--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Build application
       run: npm run build
       
-    - name: Check for TypeScript errors
-      run: npx tsc --noEmit
+    # - name: Check for TypeScript errors
+    #   run: npx tsc --noEmit
       
-    - name: Run accessibility checks
-      run: npx next lint --no-cache
+    # - name: Run accessibility checks
+    #   run: npx next lint --no-cache
