--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         echo "Host: ${{ secrets.VPS_HOST }}"
         echo "Username: ${{ secrets.VPS_USERNAME }}"
-        echo "Key length: ${#secrets.VPS_SSH_KEY}"
+        echo "Key length: ${{#secrets.VPS_SSH_KEY}}"
     
     - name: Deploy to VPS
       uses: appleboy/ssh-action@v1.0.0
