--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # ou '20'
+          node-version: '18'
           cache: 'npm'
 
       - name: Install dependencies
@@ -27,32 +27,25 @@ jobs:
       - name: Build application
         run: npm run build
 
-      # Charge la clé SSH depuis GitHub Secrets
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
-
-      # Vérifie que la connexion SSH par clé fonctionne
-      - name: Test SSH connection
-        run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}
-
-      # Déploiement
+          
       - name: Deploy to server
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "mkdir -p /var/www/staging"
-
-          rsync -avz --delete -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" \
-            --exclude='node_modules' \
+          rsync -avz --delete \
             --exclude='.git' \
             --exclude='.github' \
-            --exclude='.env.local' \
-            --exclude='.next/cache' \
-            ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/var/www/staging/
-
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd /var/www/staging && npm ci --legacy-peer-deps --only=staging"
-
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd /var/www/staging && \ pm2 describe itcc-website-frontend > /dev/null \ && pm2 reload itcc-website-frontend \ || pm2 start npm --name 'itcc-website-frontend' -- start"
+            --exclude='node_modules' \
+            package.json \
+            .next/ \
+            ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/var/www/staging/itcc-website-frontend/
+          
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
+            cd /var/www/staging/itcc-website-frontend && \
+            npm ci --omit=dev && \
+            pm2 reload itcc-website-frontend || pm2 start npm --name itcc-website-frontend -- start
+          "
